[tool.poetry]
name = "mousetrap"
version = "0.1.0"
description = "location tracking package"
authors = ["Raymond W. Chang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
opencv-python = "^4.8.1.78"
seaborn = "^0.13.0"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
